--- a/src/components/Feedback.css
+++ b/src/components/Feedback.css
@@ -1,14 +1,14 @@
 /* Center the box horizontally and vertically */
-.container {
+/* .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; Set the height of the container to 100% of viewport height */
-  }
+    /* height: 100vh; Set the height of the container to 100% of viewport height 
+  } */
   
   /* Define styles for the form */
   .form-container {
-    max-width: 90%;
+    /* max-width: 90%; */
     background-color: #f8f9fa; /* Set background color for the form container */
     padding: 40px;
     border-radius: 8px;
@@ -59,3 +59,18 @@
     background-color: #0056b3;
   }
   
+  .bg-overlay-screen{
+    color:rgb(173, 7, 7);
+    font-size: 120px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .outer-box{
+    background-color: green ;
+    padding: 30px 50px;
+    margin: 0px 100px;
+    width: 900px;
+    text-align: center;
+    margin: 0px 300px;
+  }
