--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,7 @@ footer {
     margin-top: 30px;
     bottom: 0;
     width: 100%;
-    background-color: rgb(162, 157, 147);
+    background-color: #008265;
     padding: 10px;
     text-align: center;
   }
@@ -41,9 +41,21 @@ footer {
   .horizontal-section .headings {
     font-size: 20px;
     font-weight: bold;
+    color: white;
   }
   
   .vertical-section {
     gap: 10px;
+    color: white;
+  }
+
+  .vertical-section img{
+
+  }
+
+  .textemail{
+    font-size: 35px;
+    color: white;
+    font-weight: bold;
   }
   
