--- a/src/components/Contactus.css
+++ b/src/components/Contactus.css
@@ -1,4 +1,42 @@
 #testimonials {
   border: 2px solid black;
-  background-color: crimson;
+  background-color: #be95c4;
+  padding-bottom: 190px;
+}
+
+.contact-section{
+  margin-bottom:10px;
+}
+.contact-container{
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  font-size: 20px;
+  
+}
+
+.contact-details{
+  padding-left: 20px;
+  margin-left: 250px;
+  
+}
+
+.address{
+  padding-top:30px;
+  padding-bottom: 40px;
+  margin: 0px;
+}
+
+.contact-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #F188BE;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.contact-button:hover {
+  background-color: #231942;
 }
