--- a/src/components/Feedback.css
+++ b/src/components/Feedback.css
@@ -1,76 +1,70 @@
-/* Center the box horizontally and vertically */
-/* .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 100vh; Set the height of the container to 100% of viewport height 
-  } */
-  
-  /* Define styles for the form */
+
+ 
   .form-container {
-    /* max-width: 90%; */
-    background-color: #f8f9fa; /* Set background color for the form container */
+    
+    background-color: #f8f9fa; 
     padding: 40px;
-    border-radius: 8px;
+    border-radius: 20px;
   }
   
-  /* Apply font size */
   .form-container label,
   .form-container input,
   .form-container textarea {
     font-size: 16px;
   }
   
-  /* Apply font color */
+  
   .form-container label,
   .form-container input,
   .form-container textarea {
     color: #333;
   }
   
-  /* Reset margins and paddings for various elements */
   .form-group {
     margin-bottom: 1rem;
   }
   
-  /* Apply box-sizing for all elements */
-  *, *:before, *:after {
+  
+  *:before, *:after {
     box-sizing: border-box;
   }
   
+
   
-  
-  /* Apply default font size for HTML and body */
-  html, body {
-    font-size: 16px;
-  } */
   
   /* Style submit button */
-  input[type="submit"] {
-    background-color: #007bff;
+  .submit {
+    background-color: #F188BE;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
   }
   
-  input[type="submit"]:hover {
-    background-color: #0056b3;
+  .submit :hover {
+    background-color: #231942;
   }
   
   .bg-overlay-screen{
-    color:rgb(173, 7, 7);
-    font-size: 120px;
-    text-align: center;
+    
+    font-size: 100px;
+    /* text-align: center; */
     font-weight: bold;
+    padding: 50px;
+    margin: 30px 30px;
+    border: 2px solid black;
+    background-color: #f188be3c;
+    border-radius: 20px;
+
   }
 
   .outer-box{
-    background-color: green ;
-    padding: 30px 50px;
-    margin: 0px 100px;
-    width: 900px;
-    text-align: center;
-    margin: 0px 300px;
+    /* background-color: green ; */
+    padding: 30px 0px;
+    margin: 0px 0px;
+    width: 100%;
+    /* text-align: center; */
+    margin: 0px 00px;
   }
