--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,29 +1,4 @@
-.ftmenu{
-    margin: 30px 10px;
-    padding-bottom: 50px;
-    background-color: rgba(227, 172, 152, 0.2) 
-  }
-  .featured-menu {
-    font-family: "Sofia", sans-serif;
-    color: greenyellow;
-    font-size: 40px;
-    font-size: 80px;
-  }
-  .featured-menu .feat {
-    font-family: "Sofia", sans-serif;
-    font-size: 70px;
-    font-weight: bold;
-    color: greenyellow;
-  }
-  
-  
-  
-  .featured-menu .menu {
-    font-family: "Sofia", sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    color: rgb(96, 159, 48);
-  }
+
   
   .menucontainer {
     display: flex;
@@ -39,7 +14,7 @@
     align-items: center;
     flex-grow: 1;
     width: auto;
-    /* background-color: black; */
+    /* background-color: white; */
     color: white;
     height: 100px;
     font-size: 25px;
@@ -90,11 +65,11 @@
     width: 70px;
   }
   
-  .menuPage {
+  /* .menuPage {
     position: relative;
-    background-image: url("https://static.vecteezy.com/system/resources/previews/006/823/934/original/set-icons-with-foods-doodle-with-foods-icons-on-black-background-vintage-food-set-icons-sweet-elements-background-for-your-project-menu-cafe-shop-free-vector.jpg");
+    background-image: url("https://static.vecteezy.com/system/resources/previews/006/823/934/original/set-icons-with-foods-doodle-with-foods-icons-on-white-background-vintage-food-set-icons-sweet-elements-background-for-your-project-menu-cafe-shop-free-vector.jpg");
     
-  }
+  } */
   
   .menuPage::before {
     content: "";
@@ -103,7 +78,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(127, 52, 52, 0.175);
+    /* background-color: rgba(127, 52, 52, 0.175); */
     z-index: -1;
   }
   
@@ -134,7 +109,9 @@
   
    .fullmenu{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
+    background-color: #fc819e03;
+    border-radius: 20px;
    }
   
    .food{
@@ -144,19 +121,21 @@
    }
   
   .billDetails {
-    color: black;
+    color: white;
     width: 35%;
-    background-color: rgb(213, 229, 202);
+    background-color: #5e548e;
     margin-top: 120px;
-    max-height: 600px; 
+    max-height: 500px; 
     margin-left: 900px;
     margin-right: 30px;
     position: fixed;
-    border: 5px solid black;
+    border: 5px solid WHITE;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     height:700px;
+    margin-bottom: 200px;
+    border-radius: 20px;
   }
   
   #orderSummary .heading{
@@ -165,27 +144,28 @@
     font-size: 40px;
     margin-bottom: 20px; 
     text-align: center;
-    color: black;
-    border: 2px black solid;
-    background-color: rgb(221, 170, 30);
+    color: white;
+    border: 2px WHITE solid;
+    /* background-color: rgb(221, 170, 30); */
     margin: 20px;
+    border-radius: 20px;
   }
   
   .orders{
-    color:black;
+    color:white;
     padding-left: 20px;
     font-size: 20px;
-    border: 1px solid black;
+    /* border: 1px solid white; */
     padding:10px;
     margin: 20px;
-    background-color: #c3dca9;
-    color: black;
+    /* background-color: #c3dca9; */
+    color: white;
   }
   
   
   #totalBill {
     margin-left: 20px; 
-    background-color: rgb(253, 204, 69);
+    /* background-color: rgb(253, 204, 69); */
     margin-top: auto; 
     height: 50px;
     text-align: right;
@@ -194,21 +174,23 @@
     padding-right: 10px;
     font-weight: bold;
     margin-right:20px;
-    border: 2px solid black;
+    border: 2px solid white;
     margin-bottom: 20px;
+    border-radius: 20px;
   } 
 
   .foodType {
     display: flex;
     flex-direction: column;
-    border: 5px solid black;
+    border: 5px solid white;
     padding: 20px;
     align-content: center;
     justify-content: center;
-    background-color: rgb(129, 176, 184);
+    background-color:   #5e548e;
     width: 800px;
     margin-top: 120px;
     margin-left: 40px;
+    border-radius: 20px;
   }
   .foodTypeTitle {
     display: flex;
@@ -216,12 +198,23 @@
     align-items: center;
     height: 40px;
     width: 100%;
-    background-color: rgb(51, 148, 189); 
-    color: #184d47; 
+    background-color:   #fc819e45; 
+    color: #f9f9f9; 
     padding: 10px;
-    font-family: "Cormorant Garamond", serif;
-    font-weight: bold; 
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     text-transform: uppercase; 
     margin-bottom: 20px; 
     font-size: 40px;
+    border-radius: 20px;
+  }
+
+  .whole{
+    display: flex;
+    flex-direction: row;
+    background-color: #fc819e45;
+    border-radius: 20px;
+    /* color: white; */
+    padding-bottom: 20px;
   }
