--- a/src/components/DelicateDelicacies.css
+++ b/src/components/DelicateDelicacies.css
@@ -2,16 +2,18 @@
     margin: 30px 10px;
     padding-bottom: 50px;
     background-color: #C7B1DB;
+    /* position: relative; /* Ensure the carousel remains within the container */
+    /* z-index: 1;  */ 
   }
   .featured-menu {
-    font-family: "Sofia", sans-serif;
+    
     color: white;
     font-size: 70px;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   .featured-menu .feat {
-    font-family: "Sofia", sans-serif;
+    
     font-size: 70px;
     font-weight: bold;
     color: white;
@@ -19,10 +21,8 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   
-  
-  
   .featured-menu .menu {
-    font-family: "Sofia", sans-serif;
+    
     font-size: 70px;
     font-weight: bold;
     color: white;
