--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,12 +1,18 @@
 /* .wholeLanding{
     background-color: #fab2dd54;
-    background-image: url("https://cdn.dribbble.com/users/472428/screenshots/5714875/media/5bb93fd866e75b999e9233b48ffad725.jpg?resize=400x0");
     opacity:0.3;
     padding-bottom: 20px;
     z-index: -1;
 } */
 
 .wholeLanding {
+  background-color: rgba(244, 201, 227, 0.54); 
+  padding-bottom: 20px;
+  z-index: -1;
+}
+
+
+/* .wholeLanding {
     position: relative;
     padding-bottom: 20px;
     z-index: -1;
@@ -23,4 +29,4 @@
     opacity: 0.6; 
     z-index: -1;
   }
-  
+   */
